syntax="proto3";

package province;

option go_package="/";

import "google/protobuf/empty.proto";

service ProvinceService {
    rpc GetAllProvinces(google.protobuf.Empty) returns (GetAllProvincesResponse) {}
    rpc GetProvinceByID(GetProvinceByIDRequest) returns (GetProvinceByIDResponse) {}
    rpc GetProvincesByIDs(GetProvincesByIDsRequest) returns (GetProvincesByIDsResponse) {}
}

// GetAllProvinces
message GetAllProvincesResponse {
    Header header = 1;
    repeated ProvinceData data = 2;
}

// GetProvinceByID
message GetProvinceByIDRequest {
    GetProvinceByIDInput request = 1;
}

message GetProvinceByIDInput {
    string id = 1;
}

message GetProvinceByIDResponse {
    Header header = 1;
    ProvinceData data = 2;
}

// GetProvincesByIDs
message GetProvincesByIDsRequest {
    GetProvincesByIDsInput request = 1;
}

message GetProvincesByIDsInput {
    repeated string id = 1;
}

message GetProvincesByIDsResponse {
    Header header = 1;
    repeated ProvinceData data = 2;
}

// Base Data
message ProvinceData {
    string provinceID = 1;
    string provinceName = 2;
    string islandID = 3;
}

message Header {
    int32 status = 1;
    repeated string message = 2;
}

message OptionalString {
    string value = 1;
    bool hasSet = 2;
}
